Removed video from hero section, added additional photos, adjusted hero h1 and h2

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 19 2021 10:58:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Nov 20 2021 11:03:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -51,14 +51,9 @@ drift.load('r73nxaxiv89c');
 </head>
 <body class="ryu_body">
   <div id="Hero" class="hero_section wf-section">
-    <div data-poster-url="videos/ryu_acupuncture_hero-poster-00001.jpg" data-video-urls="videos/ryu_acupuncture_hero-transcode.mp4,videos/ryu_acupuncture_hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/ryu_acupuncture_hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-        <source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true">
-        <source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true">
-      </video>
-      <h1 class="ryu_title">Ryu Acupuncture Clinic</h1>
-      <h2 class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
-      <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
-    </div>
+    <h1 class="ryu_title">Ryu Acupuncture Clinic</h1>
+    <h2 class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
+    <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="menu_container wf-section">
@@ -345,7 +340,7 @@ drift.load('r73nxaxiv89c');
           <p class="cards_para">Ear acupuncture, or auriculotherapy, is a form of medicine based on the notion that the ear is a micro system that reflects the body. The auricle, or outer portion of the ear, is where treatment is performed.</p>
         </div>
         <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f15-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/hand_moxa.png" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/hand_moxa-p-500.png 500w, images/hand_moxa-p-800.png 800w, images/hand_moxa.png 900w" alt="A hand holding moxa coals." class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/hand_moxa.png" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/hand_moxa-p-500.png 500w, images/hand_moxa.png 900w" alt="A hand holding moxa coals." class="cards_img"></div>
           <h3 id="w-node-a5855f2e-be73-11df-a01b-7dade4327f18-bfb09bd8" class="card_h3">Moxibustion</h3>
           <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1a-bfb09bd8" class="cards_para">A traditional Chinese medicine, Moxibustion is a therapy that consists of burning dried mugwort on particular points of the body. This is often used as a treatment for a wide-range variety of conditions.</p>
         </div>
