Slight change to the title block on home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Nov 20 2021 11:03:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Dec 06 2021 07:53:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -110,7 +110,12 @@ drift.load('r73nxaxiv89c');
       </div>
       <div class="_2_block_row_reverse">
         <div class="_360_frame_block">
-          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 87vw, (max-width: 991px) 28vw, (max-width: 1439px) 43vw, 580px" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2"></a>
+          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 87vw, (max-width: 991px) 28vw, (max-width: 1439px) 43vw, 580px" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2">
+            <script type="application/json" class="w-json">{
+  "items": [],
+  "group": ""
+}</script>
+          </a>
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">RESULTS MATTER</div>
@@ -154,17 +159,17 @@ drift.load('r73nxaxiv89c');
             <script type="application/json" class="w-json">{
   "items": [
     {
-      "width": 649,
-      "caption": "",
-      "height": 450,
-      "fileName": "5f795448e050e114f36745d5_outside_of_ryu_acupuncture.jpg",
-      "origFileName": "outside_of_ryu_acupuncture.jpg",
-      "url": "images/outside_of_ryu_acupuncture.jpg",
       "_id": "5f795448e050e114f36745d5",
-      "type": "image",
-      "fileSize": 49062
+      "origFileName": "outside_of_ryu_acupuncture.jpg",
+      "fileName": "outside_of_ryu_acupuncture.jpg",
+      "fileSize": 49062,
+      "height": 450,
+      "url": "images/outside_of_ryu_acupuncture.jpg",
+      "width": 649,
+      "type": "image"
     }
-  ]
+  ],
+  "group": ""
 }</script>
           </a>
         </div>
@@ -213,16 +218,17 @@ drift.load('r73nxaxiv89c');
             <script type="application/json" class="w-json">{
   "items": [
     {
-      "type": "image",
       "_id": "5f68a41d4c2aa34a385adb35",
-      "fileName": "dr_jay_ryu_with_family.jpg",
       "origFileName": "dr_jay_ryu_with_family.jpg",
-      "width": 1000,
-      "height": 750,
+      "fileName": "dr_jay_ryu_with_family.jpg",
       "fileSize": 72101,
-      "url": "images/dr_jay_ryu_with_family.jpg"
+      "height": 750,
+      "url": "images/dr_jay_ryu_with_family.jpg",
+      "width": 1000,
+      "type": "image"
     }
-  ]
+  ],
+  "group": ""
 }</script>
           </a>
         </div>
@@ -231,16 +237,17 @@ drift.load('r73nxaxiv89c');
             <script type="application/json" class="w-json">{
   "items": [
     {
-      "type": "image",
       "_id": "6079328338e88c4a3100c5c6",
-      "fileName": "dr_jay_ryu_with_mother_and_child.jpg",
       "origFileName": "dr_jay_ryu_with_mother_and_child.jpg",
-      "width": 562,
-      "height": 1000,
+      "fileName": "dr_jay_ryu_with_mother_and_child.jpg",
       "fileSize": 87789,
-      "url": "images/dr_jay_ryu_with_mother_and_child.jpg"
+      "height": 1000,
+      "url": "images/dr_jay_ryu_with_mother_and_child.jpg",
+      "width": 562,
+      "type": "image"
     }
-  ]
+  ],
+  "group": ""
 }</script>
           </a>
         </div>
@@ -249,16 +256,17 @@ drift.load('r73nxaxiv89c');
             <script type="application/json" class="w-json">{
   "items": [
     {
-      "type": "image",
       "_id": "5f68a40a57f4968104bad06b",
-      "fileName": "dr_jay_ryu_with_mother_and_little_girl.jpg",
       "origFileName": "dr_jay_ryu_with_mother_and_little_girl.jpg",
-      "width": 1000,
-      "height": 562,
+      "fileName": "dr_jay_ryu_with_mother_and_little_girl.jpg",
       "fileSize": 74998,
-      "url": "images/dr_jay_ryu_with_mother_and_little_girl.jpg"
+      "height": 562,
+      "url": "images/dr_jay_ryu_with_mother_and_little_girl.jpg",
+      "width": 1000,
+      "type": "image"
     }
-  ]
+  ],
+  "group": ""
 }</script>
           </a>
         </div>
@@ -267,16 +275,17 @@ drift.load('r73nxaxiv89c');
             <script type="application/json" class="w-json">{
   "items": [
     {
-      "type": "image",
       "_id": "607933d5fa1bca7652dddd28",
-      "fileName": "dr_jay_ryu_with_husband_and_wife.jpg",
       "origFileName": "dr_jay_ryu_with_husband_and_wife.jpg",
-      "width": 750,
-      "height": 1000,
+      "fileName": "dr_jay_ryu_with_husband_and_wife.jpg",
       "fileSize": 109366,
-      "url": "images/dr_jay_ryu_with_husband_and_wife.jpg"
+      "height": 1000,
+      "url": "images/dr_jay_ryu_with_husband_and_wife.jpg",
+      "width": 750,
+      "type": "image"
     }
-  ]
+  ],
+  "group": ""
 }</script>
           </a>
         </div>
@@ -285,17 +294,17 @@ drift.load('r73nxaxiv89c');
             <script type="application/json" class="w-json">{
   "items": [
     {
-      "width": 1200,
-      "caption": "",
-      "height": 1600,
-      "fileName": "dr_jay_ryu_with_happy_mother.jpg",
-      "origFileName": "dr_jay_ryu_with_happy_mother.jpg",
-      "url": "images/dr_jay_ryu_with_happy_mother.jpg",
       "_id": "607937c5c79f132d25b99651",
-      "type": "image",
-      "fileSize": 188658
+      "origFileName": "dr_jay_ryu_with_happy_mother.jpg",
+      "fileName": "dr_jay_ryu_with_happy_mother.jpg",
+      "fileSize": 188658,
+      "height": 1600,
+      "url": "images/dr_jay_ryu_with_happy_mother.jpg",
+      "width": 1200,
+      "type": "image"
     }
-  ]
+  ],
+  "group": ""
 }</script>
           </a>
         </div>
