--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Dec 06 2021 07:53:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 21 2021 07:31:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -19,35 +19,10 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="https://www.ryuacupuncture.com//services" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-K5B9XR71Z7"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-K5B9XR71Z7', {'anonymize_ip': false});</script>
-  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script><!--  Start of Async Drift Code  -->
-  <script>
-"use strict";
-!function() {
-  var t = window.driftt = window.drift = window.driftt || [];
-  if (!t.init) {
-    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-    t.factory = function(e) {
-      return function() {
-        var n = Array.prototype.slice.call(arguments);
-        return n.unshift(e), t.push(n), t;
-      };
-    }, t.methods.forEach(function(e) {
-      t[e] = t.factory(e);
-    }), t.load = function(t) {
-      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-      var i = document.getElementsByTagName("script")[0];
-      i.parentNode.insertBefore(o, i);
-    };
-  }
-}();
-drift.SNIPPET_VERSION = '0.3.1';
-drift.load('r73nxaxiv89c');
-</script>
-  <!--  End of Async Drift Code  -->
+  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -88,7 +63,7 @@ drift.load('r73nxaxiv89c');
           <p class="services_para">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing Qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
           <p class="services_para">Essentially, acupuncture is the process of inserting very thin needles through the skin to activate the body&#x27;s natural ability to heal itself. This process is painless and will cause no physical harm, yet will elicit the body into activating a natural healing response. Simultaneously, reactions within the central nervous system, circulatory system and endocrine system help acupuncture deliver strong, lasting effects.</p>
           <p class="services_para">Acupuncture is recognized by the <a href="https://www.who.int/" class="blue_link">World Health Organization</a> and the <a href="https://www.nccih.nih.gov/health/acupuncture-in-depth" class="blue_link">National Institutes of Health</a> as effecting in treating acute/chronic pain, neurological disorders, respiratory issues, digestive problems, urinary and reproductive health, immune function, ear/eye disorders, depression, anxiety, insomnia and even additions.<br></p>
-          <a href="acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+          <a href="services/acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
         </div>
       </div>
       <div class="_2_block_row">
@@ -100,7 +75,7 @@ drift.load('r73nxaxiv89c');
           <p class="services_para">For centuries, China and other Asian countries have embraced Chinese Herbal Medicine. It&#x27;s usage and evolution can be found over a span of 2000 years and is the foundation upon which Traditional Chinese Medicine (TCM) is based upon. It has grown to become a powerful tool in regulating the body&#x27;s functions to both treat and prevent illnesses.</p>
           <p class="services_para">Currently, more than 80% of the Traditional Chinese Medicine treatments in China are herbal. In fact, many of today&#x27;s modern drugs have been created from such herbs. These herbs are rarely used individually, but rather in conjunction with others to create a formula that consists of 2-15 herbs.</p>
           <p class="services_para">Chinese Herbal Medicine assists in maintaining daily health by balancing the body. It is also highly sought-after as it is effective in treating acute diseases and chronic illnesses. While there are many different forms of herbal medicine, they all address root causes rather than the surface issue that may be being treated.</p>
-          <a href="traditional-chinese-herbs.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+          <a href="services/traditional-chinese-herbs.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
         </div>
       </div>
       <div class="_2_block_row">
@@ -112,7 +87,7 @@ drift.load('r73nxaxiv89c');
           <p class="services_para">Cupping is an extraordinary technique, with roots to ancient Chinese and Egyptian medicine, where glass cups are placed along the body to create suction on the skin. This technique is designed to pull toxin build-up from deeper within the body to the surface. Physical pain is a good indicator that the flow of energy is blocked, allowing a build up of acids and toxins in the body.</p>
           <p class="services_para">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even though it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
           <p class="services_para">Cupping has a myriad of health benefits, though is often associated with muscle and joint pain relief, boosting the immune system, alleviating lung problems, stimulating organs, balancing hormones, relieving headaches, improving digestion and impacting your overall mental and emotional health.</p>
-          <a href="cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+          <a href="services/cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
         </div>
       </div>
       <div class="_2_block_row">
@@ -161,7 +136,7 @@ drift.load('r73nxaxiv89c');
       <p class="services_para_mobile">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing Qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
       <p class="services_para_mobile">Essentially, acupuncture is the process of inserting very thin needles through the skin to activate the body&#x27;s natural ability to heal itself. This process is painless and will cause no physical harm, yet will elicit the body into activating a natural healing response. Simultaneously, reactions within the central nervous system, circulatory system and endocrine system help acupuncture deliver strong, lasting effects.</p>
       <p class="services_para_mobile">Acupuncture is recognized by the <a href="https://www.who.int/" class="blue_link">World Health Organization</a> and the <a href="https://www.nccih.nih.gov/health/acupuncture-in-depth" class="blue_link">National Institutes of Health</a> as effecting in treating acute/chronic pain, neurological disorders, respiratory issues, digestive problems, urinary and reproductive health, immune function, ear/eye disorders, depression, anxiety, insomnia and even additions.</p>
-      <a href="acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+      <a href="services/acupuncture.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
     </div>
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_herbs"></div>
@@ -173,7 +148,7 @@ drift.load('r73nxaxiv89c');
       <p class="services_para_mobile">For centuries, China and other Asian countries have embraced Chinese Herbal Medicine. It&#x27;s usage and evolution can be found over a span of 2000 years and is the foundation upon which Traditional Chinese Medicine (TCM) is based upon. It has grown to become a powerful tool in regulating the body&#x27;s functions to both treat and prevent illnesses.</p>
       <p class="services_para_mobile">Currently, more than 80% of the Traditional Chinese Medicine treatments in China are herbal. In fact, many of today&#x27;s modern drugs have been created from such herbs. These herbs are rarely used individually, but rather in conjunction with others to create a formula that consists of 2-15 herbs.</p>
       <p class="services_para_mobile">Chinese Herbal Medicine assists in maintaining daily health by balancing the body. It is also highly sought-after as it is effective in treating acute diseases and chronic illnesses. While there are many different forms of herbal medicine, they all address root causes rather than the surface issue that may be being treated.</p>
-      <a href="traditional-chinese-herbs.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+      <a href="services/traditional-chinese-herbs.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
     </div>
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_cupping"></div>
@@ -185,7 +160,7 @@ drift.load('r73nxaxiv89c');
       <p class="services_para_mobile">Cupping is an extraordinary technique, with roots to ancient Chinese and Egyptian medicine, where glass cups are placed along the body to create suction on the skin. This technique is designed to pull toxin build-up from deeper within the body to the surface. Physical pain is a good indicator that the flow of energy is blocked, allowing a build up of acids and toxins in the body.</p>
       <p class="services_para_mobile">During the 2016 Summer Olympics cupping became part of the mainstream conversation, when U.S. swimmer Michael Phelps competed with round marks covering his back. Even though it has soared in popularity recently, cupping has been around for thousands of years, even being documented on the Ebers Papyrus, one of the world&#x27;s oldest medical textbooks.</p>
       <p class="services_para_mobile">Cupping has a myriad of health benefits, though is often associated with muscle and joint pain relief, boosting the immune system, alleviating lung problems, stimulating organs, balancing hormones, relieving headaches, improving digestion and impacting your overall mental and emotional health.</p>
-      <a href="cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
+      <a href="services/cupping.html" class="ryu_button_service w-button"><strong class="bold-text-2">SEE MORE</strong></a>
     </div>
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_ear_seeds"></div>
@@ -333,6 +308,5 @@ drift.load('r73nxaxiv89c');
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/ryu-acupuncture.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "sqrqTDIVSg");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
 </body>
 </html>
