--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Dec 06 2021 07:53:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 21 2021 07:31:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -19,35 +19,10 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="https://www.ryuacupuncture.com//testimonials" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-K5B9XR71Z7"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-K5B9XR71Z7', {'anonymize_ip': false});</script>
-  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script><!--  Start of Async Drift Code  -->
-  <script>
-"use strict";
-!function() {
-  var t = window.driftt = window.drift = window.driftt || [];
-  if (!t.init) {
-    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-    t.factory = function(e) {
-      return function() {
-        var n = Array.prototype.slice.call(arguments);
-        return n.unshift(e), t.push(n), t;
-      };
-    }, t.methods.forEach(function(e) {
-      t[e] = t.factory(e);
-    }), t.load = function(t) {
-      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-      var i = document.getElementsByTagName("script")[0];
-      i.parentNode.insertBefore(o, i);
-    };
-  }
-}();
-drift.SNIPPET_VERSION = '0.3.1';
-drift.load('r73nxaxiv89c');
-</script>
-  <!--  End of Async Drift Code  -->
+  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -84,8 +59,15 @@ drift.load('r73nxaxiv89c');
         <a data-filter=".facebook" href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a>
       </div>
       <div class="testimonial_block mix yelp _2021"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
+        <p class="testimonial_para">&quot;The Ryu Acupuncture Clinic is a family business run by mother, father and their two children. They make you feel like you are part of their family. They are kind and make sure you are well taken care of. I recommend everyone to go there. Their treatments are absolutely flawless and it has helped me a lot. They take their time with you and this is definitely a place I will return to.&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="The default Yelp profile image when a user does not provide one, which is just a silhouette of a person." class="testimonial_image">
+        <div class="testimonial_author">Henry T.</div>
+        <div class="testimonial_location">Los Angeles, CA</div>
+        <div class="testimonial_date">12/17/2021</div>
+        <div class="testimonial_source">Review from Yelp</div>
+      </div>
+      <div class="testimonial_block mix yelp _2021"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
         <p class="testimonial_para">&quot;I can&#x27;t believe it has taken me 2 years to write this update, but it&#x27;s been a busy time. Dr. Ryu is a special part of our family forever because he helped us to conceive two healthy, beautiful babies within 2 years! After many failed treatments, including failed IVF, along with pregnancy losses, and the attendant mental health issues, Dr. Ryu did something no one else could. We conceived both of our children naturally after Dr. Ryu worked on my hormones and general well-being. I have continued to go back to him for other issues, and have seen many positive effects through taking his specially formulated herb packets, and have total faith in him. His office is fantastic and works with you and your insurance too. Do yourself a favor and put yourself in his hands.&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="The default Yelp profile image when a user does not provide one, which is just a silhouette of a person." class="testimonial_image">
-        <div class="testimonial_author">Monica H..</div>
+        <div class="testimonial_author">Monica H.</div>
         <div class="testimonial_location">Los Angeles, CA</div>
         <div class="testimonial_date">10/12/2021</div>
         <div class="testimonial_source">Review from Yelp</div>
@@ -249,10 +231,10 @@ drift.load('r73nxaxiv89c');
         <div class="testimonial_date">02/24/2018</div>
         <div class="testimonial_source">Review from Yelp</div>
       </div>
-      <div class="testimonial_block mix yelp _2018">
+      <div class="testimonial_block mix yelp _2018"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
         <p class="testimonial_para">&quot;Dr Ryu is a miracle worker. I&#x27;ve had tinnitus for a solid year and I&#x27;ve done what one is supposed to do: see an ENT, get an MRI, take a lot of vitamins, and after minimal improvement, I thought I would be stuck with the ringing in my ears for life. As I write this, I have zero tinnitus and full hearing!<br><br>I was recommended to acupuncture for a stiff shoulder/neck by my GP and after a few sessions for Dr Ryu and getting full mobility back in my neck, I casually asked Dr Ryu if he could do something about my ears. He said it was difficult to treat, but I stuck with it for a month before getting sudden relief. I will continue to go back because there is no greater gift than the gift of silence.&quot;</p><img src="images/emily_S.jpg" loading="lazy" alt="Profile picture of Emily S." class="testimonial_image">
         <div class="testimonial_author">Emily S.</div>
-        <div class="testimonial_location">Los Angeles, CA</div><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
+        <div class="testimonial_location">Los Angeles, CA</div>
         <div class="testimonial_date">02/06/2018</div>
         <div class="testimonial_source">Review from Yelp</div>
       </div>
@@ -926,7 +908,6 @@ drift.load('r73nxaxiv89c');
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/ryu-acupuncture.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "sqrqTDIVSg");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.0/mixitup.min.js"></script>
   <script>
   // Set the reference to the container
