Removed unused images

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 21 2021 07:31:24 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 22 2021 06:32:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -71,7 +71,7 @@
         </div>
         <div class="_4_block_center"><img src="images/personalized_care.png" loading="lazy" alt="A blue outline of a body sitting in a meditation position, an acupuncture needle and certain points along the spine for treatment." class="eastern_medicine_icons">
           <h3 class="icon_h3">Personalized Care</h3>
-          <p class="icon_para">From check in to check out, your visit will be tailor-made around your body. No cookie cutter or one-size fits all approach here, just pure 1:1 integrative medicine.</p>
+          <p class="icon_para">From check in to check out, your visit will be tailor-made around your body. No cookie cutter or one-size fits all approach here, just pure 1:1 personalized care.</p>
         </div>
       </div>
       <div class="_2_block_row">
@@ -152,7 +152,7 @@
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CONVENIENT LOCATION</div>
           <h2 class="section_h2_left">Easily accessible and within minutes of major freeways</h2>
-          <p>Our address is 3808 W. Riverside Dr. in the beautiful city of Burbank, California. We are conveniently located within the Bank of the West building, nestled between the Warner Bros., Walt Disney and Burbank Studios. We&#x27;re just South of the 134 Ventura Freeway and minutes from the 101, 170 and 5 freeways. Our office is located on the 5th floor in suite #510.<br></p>
+          <p>Our address is 3808 W. Riverside Dr. in the beautiful city of Burbank, California near Toluca Lake. We are conveniently located within the Bank of the West building, nestled between the Warner Bros., Walt Disney and Burbank Studios. We&#x27;re just South of the 134 Ventura Freeway and minutes from the 101, 170 and 5 freeways. Our office is located on the 5th floor in suite #510.<br></p>
           <div class="div-block">
             <p>
               <a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="blue_link">Need directions? Click here.</a>
@@ -300,14 +300,14 @@
           <div class="card_block">
             <div class="crads_img_mask"><img src="images/needles_close_up.jpg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" alt="A close up shot of a hand placing needles into a patient&#x27;s back." class="cards_img"></div>
             <h3 class="card_h3">Acupuncture</h3>
-            <p class="cards_para">Acupuncture is the insertion of very thin needles through your skin at specific points of the body. A staple of traditional Chinese medicine, acupuncture is most commonly used to treat pain and stress.</p>
+            <p class="cards_para">Acupuncture is the insertion of very thin needles through your skin at specific points of the body. A staple of traditional Chinese medicine, acupuncture is most commonly used for pain management and stress.</p>
           </div>
         </a>
         <a href="services/traditional-chinese-herbs.html" class="service_card_link w-inline-block">
           <div class="card_block">
             <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" alt="A wide-variety of herbs scattered into a beautiful arrangement." class="cards_img"></div>
             <h3 id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
-            <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f08-bfb09bd8" class="cards_para">Chinese herbal medicine uses herbs to improve overall health, while combatting a wide-variety of conditions and ailments. This approach helps to balance the body by treating patient patterns.</p>
+            <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f08-bfb09bd8" class="cards_para">Chinese herbal medicine uses herbs to improve overall health and well being, while combatting a wide-variety of conditions and ailments. This approach helps to balance the body by treating patient patterns.</p>
           </div>
         </a>
         <a href="services/cupping.html" class="service_card_link w-inline-block">
