--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 22 2021 06:32:19 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f759b55b643fb59da8baab6" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
+<!DOCTYPE html><!--  Last Published: Mon Aug 15 2022 06:17:25 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="62f52e853ef14981cabc73e7" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Not Found</title>
   <meta content="Not Found" property="og:title">
   <meta content="Not Found" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
+  <meta content="N69LbseZWGFZHtZfYfVhWmL7Xxi1Xaw4PV1BvIpgPfQ" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/ryu-acupuncture.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,6 @@
   <link href="https://www.ryuacupuncture.com//404" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-K5B9XR71Z7"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-K5B9XR71Z7', {'anonymize_ip': false});</script>
-  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -43,7 +42,7 @@
   </div>
   <div class="_404_section wf-section">
     <a href="index.html" class="w-inline-block">
-      <div data-w-id="77a070f7-a864-6353-bab7-14d30dcac81c" data-animation-type="lottie" data-src="documents/ryu_404.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="lottie-animation-3"></div>
+      <div class="lottie-animation-3" data-w-id="77a070f7-a864-6353-bab7-14d30dcac81c" data-animation-type="lottie" data-src="documents/ryu_404.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
     </a>
   </div>
   <div class="footer_section wf-section">
