--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 22 2021 06:32:19 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
+<!DOCTYPE html><!--  Last Published: Mon Aug 15 2022 06:17:25 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="62f52e853ef1494969bc73ed" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Contact Us | Ryu Acupuncture Clinic</title>
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
+  <meta content="N69LbseZWGFZHtZfYfVhWmL7Xxi1Xaw4PV1BvIpgPfQ" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/ryu-acupuncture.css" rel="stylesheet" type="text/css">
@@ -22,7 +22,6 @@
   <link href="https://www.ryuacupuncture.com//contact" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-K5B9XR71Z7"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-K5B9XR71Z7', {'anonymize_ip': false});</script>
-  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -52,12 +51,13 @@
       <p class="solo_para">We&#x27;re here for you. Whether you contact us in person, by phone or email - we want to be your partner on this journey towards wellness and can promise that our kind approach coupled with years of expertise will get you on the right path. Reach out if there is any additional information desired, questions to be asked, to schedule a consultation or anything else - we enjoy nothing more than seeing people feeling better!</p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
-          <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-enable-scroll="true" data-enable-touch="true" data-widget-style="roadmap" data-widget-zoom="12" class="w-widget w-widget-map"></div>
+          <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-enable-scroll="true" data-enable-touch="true" data-widget-style="roadmap" data-widget-zoom="12" title="" class="w-widget w-widget-map"></div>
         </div>
         <div class="_2_block margin_left">
+          <p>Please send us a text to our Google Voice <a href="tel:9095662258" class="blue_link">(909) 566-2258</a> or an email to <a href="mailto:ryuacupuncture@yahoo.com" class="blue_link">ryuacupuncture@yahoo.com</a> with the subject line &quot;New Patient&quot; and we will instruct you with how to proceed with an appointment. We look forward to meeting you!</p>
           <div class="form-block w-form">
             <form id="wf-form-Website-Inquiry---Contact-Page-Form" name="wf-form-Website-Inquiry---Contact-Page-Form" data-name="Website Inquiry - Contact Page Form" method="get"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="phone" required=""><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="Field" class="w-input"></textarea>
-              <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button">
+              <div class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled g-recaptcha-invalid-key"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button">
             </form>
             <div class="success-message-2 w-form-done">
               <div>Thank you! Your submission has been received!</div>
