--- a/testimonials.html
+++ b/testimonials.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 22 2021 06:32:19 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
+<!DOCTYPE html><!--  Last Published: Mon Aug 15 2022 06:17:25 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="62f52e853ef1495fb5bc73f9" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Our Testimonials | Ryu Acupuncture Clinic</title>
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="_iO09uvLhcaQi6DQV-uV7rNTe5M6g020o0eeeHfIq0A" name="google-site-verification">
+  <meta content="N69LbseZWGFZHtZfYfVhWmL7Xxi1Xaw4PV1BvIpgPfQ" name="google-site-verification">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/ryu-acupuncture.css" rel="stylesheet" type="text/css">
@@ -22,7 +22,6 @@
   <link href="https://www.ryuacupuncture.com//testimonials" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-K5B9XR71Z7"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-K5B9XR71Z7', {'anonymize_ip': false});</script>
-  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -50,7 +49,7 @@
     <div class="main_container mix-container">
       <h1 class="section_h1">Testimonials</h1>
       <p class="solo_para">We pride ourselves in the great feedback received by our patients and strive to make every visit and experience exceptional. Our patients put their trust in our work and we want to continue to live up to the high expectations set for us. With over 110 five star reviews through Yelp and Google, we have often been referred to as the #1 rated acupuncturists in Los Angeles. Check out some of the wonderful testimonials we have received over the years down below.</p>
-      <div data-w-id="917b686c-0e22-bc8f-8889-0287e98e202a" data-animation-type="lottie" data-src="documents/best_acupuncturist.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="2" data-duration="0" class="lottie-animation"></div>
+      <div class="lottie-animation" data-w-id="917b686c-0e22-bc8f-8889-0287e98e202a" data-animation-type="lottie" data-src="documents/best_acupuncturist.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="2" data-duration="0"></div>
       <div class="block_text_pre_h2">FILTER BY SOURCE</div>
       <div class="filter-controls">
         <a data-filter="all" href="#" class="filter-button ryu_testimonial_button w-button"><strong>ALL</strong></a>
